# mcts

./: CMakeLists.txt  compile_commands.json  mcts.hpp  node.hpp  policies.hpp
examples/: CMakeLists.txt  TTT.cpp  mctsttt.cpp  mctsttt.hpp  ttt.hpp  tttmain.cpp
examples/breakthrough/: CMakeLists.txt  bitboard.cpp  bitboard.h  board.cpp  board.h  breakthrough.cpp  breakthrough.h  minmax.h  types.h
examples/oware/: CMakeLists.txt  oware.cpp  oware.h  oware_human.cpp  oware_main.cpp  oware_mcts.cpp  oware_mcts.h  time_benchmarks.cpp
examples/samegame/: display.cpp  dsu.h  sg.cpp  sg.h  sg_main.cpp
examples/tictactoe/: CMakeLists.txt  bitboard.h  tictactoe.cpp  tictactoe.h  ttt_main.cpp  types.h
src/: debug.h  mcts.h  mcts.hpp  mcts_tree.h  policies.h
src/utils/: agent_random.h  stopwatch.h  zobrist.h
